--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+  <script src="https://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 	<style type="text/css">
 	 	html, body {
 				height: 100%;
