--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,57 +35,23 @@
 <script type="text/javascript">
 
 
-	// www.here.com
-	// App_Id
-	// hQG4ZX6W0D2sUfQJeb0t
-
-	// App_Code
-	// R82WCNW4u11a93myPTaMpg
 
 // 	var marker;
 
-// 	// www.here.com geo server
-// 	var isoPlatform = new H.service.Platform({
-// 		'app_id': 'hQG4ZX6W0D2sUfQJeb0t',
-// 		'app_code': 'R82WCNW4u11a93myPTaMpg'
-// 	});
 
-// 	var isoParameters = {
-// 		'mode': 'fastest;car',
-// 		'start': 'geo!35,-97',
-// 		'time': 'PT0H15M'
-// 	};
+var isoChrone = []
+isoChrone.push("")
+isoChrone.push("")
+isoChrone.push("")
 
-// 	var onResult = function(result) {
-// 		console("IsoResult")
-// 		//console.log(result.Response.isolines[0].value)
-// 	};
-
-// 	var enterpriseRouter = isoPlatform.getEnterpriseRoutingService();
-// console.log("enterpriseRouter", enterpriseRouter)
-// debugger
-// 	enterpriseRouter.calculateIsoline(
-// 		isoParameters,
-// 		onResult,
-// 		function(error) {
-// 			console.log(error)
-// 			alertify.error(error.message);
-// 		}
-// 	);
-
-//https://route.st.nlp.nokia.com/routing/6.2/calculateisoline.json?mode=fastest;car;traffic:disabled&start=36,-97&time=PT0H15M&app_id=hQG4ZX6W0D2sUfQJeb0t&app_code=R82WCNW4u11a93myPTaMpg
-
-	
-
-
-	// https://route.st.nlp.nokia.com/routing/6.2/calculateisoline.json?mode=fastest;car;traffic:disabled&start=35,-97 &time=PT0H05M&app_id=hQG4ZX6W0D2sUfQJeb0t&app_code=R82WCNW4u11a93myPTaMpg
-
-function createIsochrone() {
+function createIsochrone(latitude, longitude, time, color, setBounds) {
 		$.ajax({
     	url: 'https://route.st.nlp.nokia.com/routing/6.2/calculateisoline.json',
     	type: 'GET',
     	datatype: 'jsonp',
-    	data: 'mode=fastest;car;traffic:disabled&start=30.451005399999996, -97.6132245&time=PT0H10M&app_id=hQG4ZX6W0D2sUfQJeb0t&app_code=R82WCNW4u11a93myPTaMpg'
+    	//data: 'mode=fastest;car;traffic:disabled&start=30.451005399999996, -97.6132245&time=PT0H10M&app_id=hQG4ZX6W0D2sUfQJeb0t&app_code=R82WCNW4u11a93myPTaMpg'
+		data: 'mode=fastest;car;traffic:disabled&start=' + latitude + ',' + longitude + '&time=' + time + '&app_id=hQG4ZX6W0D2sUfQJeb0t&app_code=R82WCNW4u11a93myPTaMpg'
+
 	}).done (function (result) {
 
 		// number of point in isoChrone
@@ -97,13 +63,12 @@ function createIsochrone() {
 			valueSplit = result.Response.isolines[0].value[n].split(",")
 			isoChronePoints.push(L.latLng(valueSplit[0], valueSplit[1]))
 		}
-		var isoChrone = L.polygon(isoChronePoints, {color: 'green'}).addTo(map);
+		var isoChrone = L.polygon(isoChronePoints, color).addTo(map);
 
-		// zoom the map to the polyline
-		map.fitBounds(isoChrone.getBounds());
-
-		alertify.success("Drive Time Polygon Created")
-
+		// zoom the map to the polygon
+		if (setBounds) { 
+			map.fitBounds(isoChrone.getBounds());
+		}
 	});
 };
 
@@ -174,13 +139,22 @@ function createIsochrone() {
 
 		// pan and zoom to location
 		var myLatLng = L.latLng(location.coords.latitude, location.coords.longitude);
-		map.setView(myLatLng, 12)   // change to 16
+		//map.setView(myLatLng, 12)   // change to 16
 
 		// add marker to map for initial location
 		marker = L.marker([latitude, longitude], {
 			bounceOnAdd: true, 
 			bounceOnAddOptions: { duration: 3000, height: 700 }
 		}).addTo(map).bindPopup('<center>Your approximate location<br>(More or less ' + location.coords.accuracy + '  metres)</center>');
+
+		// map.removeLayer(userLayer)
+		// var userLayer = new L.FeatureGroup()
+		// map.addLayer(userLayer);
+
+		createIsochrone(latitude, longitude, "PT0H10M", {color: 'red'}, true)
+		createIsochrone(latitude, longitude, "PT0H8M", {color: 'blue'}, false)
+		createIsochrone(latitude, longitude, "PT0H5M", {color: 'green'}, false)
+		alertify.success("Drive Time Polygons Created")
 	};
 
 	function error(error) {
@@ -188,6 +162,7 @@ function createIsochrone() {
 	}
 
 	navigator.geolocation.getCurrentPosition(success, error, options)
+
 	////////////////////////////////////////////
 
 
@@ -229,7 +204,8 @@ function createIsochrone() {
 	// create the layer control widget on the map
 	L.control.layers(baseMaps, overLays).addTo(map);
 	////////////////////////////////////////////
-createIsochrone();
+
+
 	////////////////////////////////////////////
 	// add geocode input box and listeners
 	// that prevent map manipulation while
@@ -252,17 +228,27 @@ createIsochrone();
 
 				var myLatLng = L.latLng(latitude, longitude);
 				
-				map.setView(myLatLng, 16)
+				//map.setView(myLatLng, 16)
 				var foundAddress = results[0].formatted_address;
 
 				// add marker to map
 				map.removeLayer(marker)
+
 				marker = L.marker([latitude, longitude], {
 					bounceOnAdd: true, 
 					bounceOnAddOptions: { duration: 3000, height: 700 }
 				}).addTo(map).bindPopup('<center>' + foundAddress + '</center>');
 
 				alertify.success("Geocoded: " + foundAddress)
+
+		// map.removeLayer(userLayer)
+		// var userLayer = new L.FeatureGroup()
+		// map.addLayer(userLayer);
+
+				createIsochrone(latitude, longitude, "PT0H10M", {color: 'red'}, true)
+				createIsochrone(latitude, longitude, "PT0H8M", {color: 'blue'}, false)
+				createIsochrone(latitude, longitude, "PT0H5M", {color: 'green'}, false)
+				alertify.success("Drive Time Polygons Created")
 			} else {
 				alertify.error("Unable to geocode")
 			}
