--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,13 +71,8 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 			map.fitBounds(isoChrone.getBounds());
 		}
 
-console.log("START")
-
 		var geoJSON = L.polygon(isoChronePoints, color).toGeoJSON()
-		//var geoJSON = L.polygon(isoChronePoints, color)
-		// console.log(JSON.stringify(geoJSON))
-		//console.log(geoJSON)
-geoJSON = JSON.stringify(geoJSON)
+		geoJSON = JSON.stringify(geoJSON)
 		$.ajax({
 		    url: "/insert_iso_shape.json",
 		    type: "POST",
@@ -85,7 +80,6 @@ geoJSON = JSON.stringify(geoJSON)
 		}).done(function (data) {
 		    console.log(data)
 		});
-console.log("FINISH")
 	});
 };
 
@@ -373,6 +367,17 @@ console.log("FINISH")
 				isoChronePoints.push(L.latLng(layer._latlngs[n].lat, layer._latlngs[n].lng))
 			}
 			isoChrone = L.polygon(isoChronePoints, {color: 'red'}).addTo(map);
+			/////////////////////////
+			var geoJSON = L.polygon(isoChronePoints, 'red').toGeoJSON()
+			geoJSON = JSON.stringify(geoJSON)
+			$.ajax({
+			    url: "/insert_iso_shape.json",
+			    type: "POST",
+			    data: {polygon: geoJSON}
+			}).done(function (data) {
+			    console.log(data)
+			});
+			/////////////////////////
 
 		} else if (layerType === "circle") {
 			isoChrone = L.circle(L.latLng(layer._latlng.lat, layer._latlng.lng), layer._mRadius).addTo(map)
