--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -340,6 +340,7 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 	var drawControl = new L.Control.Draw({
 	    edit: { featureGroup: tempDrawn }, 
 	    draw: { polyline: false,
+	    		circle: false,
 				edit: { edit: false }
 
 			  }
@@ -381,6 +382,7 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 
 		} else if (layerType === "circle") {
 			isoChrone = L.circle(L.latLng(layer._latlng.lat, layer._latlng.lng), layer._mRadius).addTo(map)
+
 		} else if (layerType === "marker") {
 			latitude = e.layer._latlng.lat
 			longitude = e.layer._latlng.lng
