--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -240,7 +240,7 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 			console.log(status)
 			if (status == "OK") {
 				console.log(results)
-				var longitude = results[0].geometry.location.D
+				var longitude = results[0].geometry.location.B
 				var latitude = results[0].geometry.location.k
 				//console.log(latitude, longitude)
 
