--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,11 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 		}
 
 		var geoJSON = L.polygon(isoChronePoints, color).toGeoJSON()
+	// console.log("===============")
+	// console.log(geoJSON)
+			geoJSON = geoJSON['geometry']
+	// console.log("===============")
+	// console.log(geoJSON)
 		geoJSON = JSON.stringify(geoJSON)
 		$.ajax({
 		    url: "/insert_iso_shape.json",
@@ -351,6 +356,11 @@ function createIsochrone(latitude, longitude, time, color, setBounds, clearIsoLa
 			isoChrone = L.polygon(isoChronePoints, {color: 'red'}).addTo(map);
 			/////////////////////////
 			var geoJSON = L.polygon(isoChronePoints, 'red').toGeoJSON()
+	console.log("===============")
+	console.log(geoJSON)
+			geoJSON = geoJSON['geometry']
+			console.log("===============")
+	console.log(geoJSON)
 			geoJSON = JSON.stringify(geoJSON)
 			$.ajax({
 			    url: "/insert_iso_shape.json",
